--- a/resources/style.css
+++ b/resources/style.css
@@ -8,8 +8,6 @@
   justify-content: space-between;
 }
 
-
-
 /*---MAIN-STYLE---*/
 html {
   font-family: Helvetica;
@@ -21,6 +19,12 @@ html {
 }
 .main-nav {
   list-style: none;
+  margin-right: 10px;
+}
+.main-nav a {
+  text-decoration: underline;
+  color: seashell;
+  padding: 10px;
 }
 .main-header {
   height: 69px;
@@ -30,5 +34,7 @@ html {
 }
 
 .logo {
-
+  height: 50px;
+  width: auto;
+  margin-left: 10px;
 }
